<resources>
    <string name="app_name">Valid test</string>
    <string name="timerForValidateInternet">3000</string>
    <string name="movie_name">Peliculas</string>
    <string name="movie_title">Peliculas</string>
    <string name="overview_title">Sinopsis</string>
    <string name="release_date">Fecha de estreno</string>
    <string name="movie_detail_title">Detalle de la película</string>
    <string name='login_email_placeholder'>Ingresa tu correo electrónico</string>
    <string name='login_password_title'>Contraseña</string>
    <string name='login_email_title'>Correo electrónico</string>
    <string name='login_password_placeholder'>Ingresa tu contraseña</string>
    <string name='login_forgot_password'>¿Has olvidado tu contraseña?</string>
    <string name='login_sign_up'>Crear cuenta</string>
    <string name='login_sign_in'>Iniciar sesión</string>
    <string name='login_screen_title'>Iniciar sesión</string>
    <string name='login_service_error'>Verifica que utilizaste el email y la contraseña correctas</string>
    <string name='login_empty_fields'>El usuario o la contraseña no pueden estar vacios</string>
    <string name='email_is_invalid'>El email debe tener una estructura válida</string>
    <string name='email_is_empty'>El email no puede estar vacío</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Opciones de pago</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="generate_payment">Generar Pago</string>
    <string name="view_payment">Visualizar Pagos</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_main21">Main2Activity1</string>
    <string name="payment_screen_title">Realizar pago</string>
    <string name="my_payments_screen_title">Pagos realizados</string>
    <string name="card_title">Ingrese los datos de su tarjeta</string>
    <string name="card_cvv_description">CVV</string>
    <string name="points">●●●● ●●●● ●●●● ●●●●</string>
    <string name='cards_full_name'>Nombre y apellido</string>
    <string name="number_card">Número de tarjeta</string>
    <string name='card_date'>MM/AA</string>
    <string name="digits_enable_editText">"abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "</string>
    <string name="card_currency_sign">$ 0</string>
    <string name="card_payment_button">Realizar pago</string>
    <string name="total_payment">Total a pagar</string>
    <string name="internal_reference">Referencia interna</string>
    <string name="transaction_state">Estado de la transacción</string>
    <string name="total_amount">Total pagado</string>
</resources>