<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.valid.edson.ui.viewModels.PaymentViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="72dp"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/addCardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen15"
                    android:layout_marginTop="@dimen/dimen15"
                    android:text="@string/card_title"
                    android:textSize="@dimen/textSize20"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cardFace"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen200"
                    android:layout_marginStart="@dimen/dimen30"
                    android:layout_marginTop="@dimen/dimen20"
                    android:layout_marginEnd="@dimen/dimen30"
                    android:background="@drawable/background_card"
                    android:elevation="@dimen/dimen15"
                    android:visibility="visible"
                    app:layout_constraintCircleRadius="@dimen/dimen50"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addCardTitle">

                    <ImageView
                        android:id="@+id/ic_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen30"
                        android:layout_marginTop="@dimen/dimen25"
                        android:background="@drawable/ic_card"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvCardNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen30"
                        android:layout_marginTop="@dimen/dimen20"
                        android:layout_marginEnd="@dimen/dimen50"
                        android:text="@{viewModel.cardNumberDescription}"
                        android:textSize="@dimen/textSize20"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/ic_card" />

                    <TextView
                        android:id="@+id/name_card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen30"
                        android:layout_marginTop="@dimen/dimen20"
                        android:layout_marginEnd="@dimen/dimen15"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@{viewModel.cardNameDescription}"
                        android:textColor="@color/font_card_color"
                        android:textSize="@dimen/textSize18"
                        app:layout_constraintEnd_toStartOf="@+id/tv_date_expired"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvCardNumber" />

                    <TextView
                        android:id="@+id/tv_date_expired"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen20"
                        android:layout_marginEnd="@dimen/dimen30"
                        android:text="@{viewModel.expirationDateDescription}"
                        android:textSize="@dimen/textSize18"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvCardNumber" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/card_cvv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen200"
                    android:layout_marginStart="@dimen/dimen30"
                    android:layout_marginTop="@dimen/dimen20"
                    android:layout_marginEnd="@dimen/dimen30"
                    android:elevation="@dimen/dimen15"
                    android:visibility="visible"
                    app:layout_constraintCircleRadius="@dimen/dimen50"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addCardTitle">

                    <View
                        android:id="@+id/line_magnetic"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen30"
                        android:layout_marginTop="@dimen/dimen40"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linesGray"
                        android:layout_width="@dimen/dimen120"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen50"
                        android:layout_marginTop="@dimen/dimen20"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/line_magnetic">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen2"
                            android:background="@color/colorPrimaryLight" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen2"
                            android:layout_marginTop="@dimen/dimen3"
                            android:background="@color/colorPrimaryLight" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen2"
                            android:layout_marginTop="@dimen/dimen3"
                            android:background="@color/colorPrimaryLight" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen2"
                            android:layout_marginTop="@dimen/dimen3"
                            android:background="@color/colorPrimaryLight" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvCardCvvDescription"
                        android:layout_width="@dimen/dimen30"
                        android:layout_height="@dimen/dimen0"
                        android:background="@android:color/white"
                        android:paddingStart="@dimen/dimen2"
                        android:text="@{viewModel.cvvNumberDescription}"
                        android:textSize="@dimen/textSize13"
                        app:layout_constraintBottom_toBottomOf="@+id/linesGray"
                        app:layout_constraintStart_toEndOf="@+id/linesGray" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/tvCardNumberTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen20"
                    android:layout_marginTop="@dimen/dimen15"
                    android:text="@string/number_card"
                    android:textSize="@dimen/textSize16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_cvv" />

                <EditText
                    android:id="@+id/etCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen48"
                    android:layout_marginStart="@dimen/dimen20"
                    android:layout_marginTop="@dimen/dimen10"
                    android:layout_marginEnd="@dimen/dimen20"
                    android:background="@drawable/drawable_backgraund_botton"
                    android:hint="@string/points"
                    android:inputType="number"
                    android:maxLength="46"
                    android:paddingStart="@dimen/dimen10"
                    android:paddingEnd="@dimen/dimen5"
                    android:singleLine="true"
                    android:text="@={viewModel.cardNumber}"
                    android:textCursorDrawable="@null"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCardNumberTitle" />

                <EditText
                    android:id="@+id/etCardName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen48"
                    android:layout_marginStart="@dimen/dimen20"
                    android:layout_marginTop="@dimen/dimen10"
                    android:layout_marginEnd="@dimen/dimen20"
                    android:background="@drawable/drawable_backgraund_botton"
                    android:digits="@string/digits_enable_editText"
                    android:hint="@string/cards_full_name"
                    android:maxLength="46"
                    android:paddingStart="@dimen/dimen10"
                    android:paddingEnd="@dimen/dimen5"
                    android:singleLine="true"
                    android:text="@={viewModel.cardName}"
                    android:textCursorDrawable="@null"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etCardNumber" />

                <EditText
                    android:id="@+id/etCardDate"
                    android:layout_width="@dimen/dimen150"
                    android:layout_height="@dimen/dimen48"
                    android:layout_marginStart="@dimen/dimen20"
                    android:layout_marginTop="@dimen/dimen10"
                    android:layout_marginEnd="@dimen/dimen20"
                    android:background="@drawable/drawable_backgraund_botton"
                    android:hint="@string/card_date"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingStart="@dimen/dimen10"
                    android:paddingEnd="@dimen/dimen5"
                    android:singleLine="true"
                    android:text="@={viewModel.expirationDate}"
                    android:textCursorDrawable="@null"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etCardName" />

                <EditText
                    android:id="@+id/etCvv"
                    android:layout_width="@dimen/dimen150"
                    android:layout_height="@dimen/dimen48"
                    android:layout_marginStart="@dimen/dimen20"
                    android:layout_marginEnd="@dimen/dimen20"
                    android:background="@drawable/drawable_backgraund_botton"
                    android:hint="@string/card_cvv_description"
                    android:inputType="number"
                    android:maxLength="3"
                    android:paddingStart="@dimen/dimen10"
                    android:singleLine="true"
                    android:text="@={viewModel.cvvNumber}"
                    android:textCursorDrawable="@null"
                    android:visibility="visible"
                    app:layout_constraintStart_toEndOf="@+id/etCardDate"
                    app:layout_constraintTop_toTopOf="@+id/etCardDate" />

                <TextView
                    android:id="@+id/tvTotalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen20"
                    android:layout_marginTop="@dimen/dimen15"
                    android:text="@string/total_payment"
                    android:textSize="@dimen/textSize16"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etCardDate" />

                <EditText
                    android:id="@+id/etTotalAmount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen48"
                    android:layout_marginStart="@dimen/dimen20"
                    android:layout_marginTop="@dimen/dimen10"
                    android:layout_marginEnd="@dimen/dimen20"
                    android:background="@drawable/drawable_backgraund_botton"
                    android:hint="@string/card_currency_sign"
                    android:inputType="number"
                    android:maxLength="25"
                    android:paddingStart="@dimen/dimen10"
                    android:paddingEnd="@dimen/dimen10"
                    android:singleLine="true"
                    android:text="@={viewModel.totalPayment}"
                    android:textAlignment="textEnd"
                    android:textCursorDrawable="@null"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTotalAmount" />

                <Button
                    android:id="@+id/btnPayment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen20"
                    android:layout_marginTop="@dimen/dimen10"
                    android:layout_marginEnd="@dimen/dimen20"
                    android:enabled="@{viewModel.buttonPaymentEnabled}"
                    android:onClick="@{() -> viewModel.paymentButtonClick()}"
                    android:text="@string/card_payment_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etTotalAmount" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>